--- a/webDAVstyles.css
+++ b/webDAVstyles.css
@@ -12,9 +12,14 @@ ul li {
     align-items: center;
     margin: 16px 8px;
 }
-ul li .fileIcon {
+.fileIcon {
     width: 100px;
     height: 100px;
+}
+.fileIcon img,
+.fileIcon svg {
+    max-width: 100%;
+    max-height: 100%;
 }
 ul li a {
     text-align: center;
@@ -39,11 +44,13 @@ svg path {
     left: 0;
     right: 0;
 }
-#bigViewDiv .nav, #bigViewDiv .close {
+#bigViewDiv .nav,
+#bigViewDiv .close {
     position: fixed;
     opacity: .3;
 }
-#bigViewDiv .nav:hover, #bigViewDiv .close:hover {
+#bigViewDiv .nav:hover,
+#bigViewDiv .close:hover {
     cursor: pointer;
     opacity: .8;
 }
@@ -53,7 +60,8 @@ svg path {
     top: 16px;
     right: 16px;
 }
-#bigViewDiv .close::before, #bigViewDiv .close::after {
+#bigViewDiv .close::before,
+#bigViewDiv .close::after {
     position: absolute;
     content: '';
     background-color: white;
@@ -68,7 +76,8 @@ svg path {
 #bigViewDiv .close::after {
     transform: rotate(-45deg);
 }
-#bigViewDiv .close:hover::before, #bigViewDiv .close:hover::after {
+#bigViewDiv .close:hover::before,
+#bigViewDiv .close:hover::after {
     background-color: #e02020;
     height: 48px;
     width: 4px;
